syntax = "proto3";

option csharp_namespace = "ProfileService.GRPC";

package profile;

// The Profiler service definition.
service Profiler {

  rpc GetPersonalDataById (ProfileByIdRequest) 
	returns (PersonalDataResponce);

  rpc UpdatePersonalData (PersonalDataRequest) 
	returns (BasicVoidResponce);

  rpc GetDiscounts (ProfileByIdRequest) 
	returns (DiscountsResponce);

  rpc UpdateDiscount (Discount) 
	returns (BasicVoidResponce);
}	

// The request message containing the user's id.
message ProfileByIdRequest {
  string id = 1;
}

// The response message containing the PersonalData.
message PersonalDataRequest {
  string id = 1;
  string name = 2;
  string surname = 3;
  string phone = 4;
  string email = 5;
}

message PersonalDataResponce {
	string id = 1;
	string name = 2;
	string surname = 3;
	string phone = 4;
	string email = 5;
}

message BasicVoidResponce {
}

enum DiscountType {
	AMOUNT = 0;
	DISCOUNT = 1;
}

message Discount{
	string id = 1;
	bool isalreadyused = 2;
	DiscountType type = 3;
	double amount = 4;
	double discount = 5;	
}

message DiscountsResponce{
	repeated Discount discount = 1;	
}

